<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/ingredient_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="14dp"
        android:text="@string/ingredient_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ingredient_widget"
        android:layout_alignStart="@+id/ingredient_widget"
        android:layout_below="@+id/ingredient_widget"
        android:layout_marginTop="15dp"
        android:text="@string/quantity_label"
        android:textColor="@color/colorAccent"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/quatity_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:textColor="@color/black"
        android:textSize="17sp"
        tool:text="@string/quantity_value" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/quatity_widget"
        android:layout_marginLeft="77dp"
        android:layout_marginStart="77dp"
        android:layout_toEndOf="@+id/quatity_widget"
        android:layout_toRightOf="@+id/quatity_widget"
        android:text="@string/measure_label"
        android:textColor="@color/colorAccent"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/measure_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:textColor="@color/black"
        android:textSize="17sp"
        tool:text="@string/measure_value" />

</RelativeLayout>