<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/recipe_image_widget"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/image_desc"
            android:src="@color/black" />

        <TextView
            android:id="@+id/recipe_name_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tool:text="@string/recipe_name" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_view_widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:gravity="center" />

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/empty_view_text"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

    </RelativeLayout>


</FrameLayout>