<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="com.android.example.bakingapp.activity.StepDetailsActivity">
    <!--
    This layout is a two-pane layout for the master/detail flow.
    -->
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        />

    <!-- A small divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:id="@+id/description_on_step_details"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/step_short_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:textColor="@color/black"
                android:textSize="23sp"
                tool:text="@string/step_short_desc"

                />

            <TextView
                android:id="@+id/step_long_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="23sp"
                tool:text="@string/step_long_desc"

                />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/navigation_on_step_details"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/step_prev"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="75dp"
            android:layout_marginStart="50dp"
            android:text="@string/prev" />

        <Button
            android:id="@+id/step_next"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>
