<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="2dp"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="3dp"
        android:layout_marginBottom="1dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                card_view:layout_constraintRight_toLeftOf="@+id/recipe_image"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                card_view:layout_constraintHorizontal_bias="0.045" />

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="100dp"
                android:layout_height="80dp"
                card_view:srcCompat="@mipmap/ic_launcher"
                card_view:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintVertical_bias="0.2" />

            <Button
                android:id="@+id/recipe_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredient_button"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="8dp"
                android:textAllCaps="true"
                card_view:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="23dp"
                android:background="#FFFFFF"
                android:textColor="@color/blue"

                card_view:layout_constraintTop_toBottomOf="@+id/recipe_name"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                card_view:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/recipe_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps_button"
                android:background="#FFFFFF"
                android:textColor="@color/blue"

                android:textAllCaps="true"
                card_view:layout_constraintLeft_toRightOf="@+id/recipe_ingredient"
                android:layout_marginLeft="46dp"
                android:layout_marginStart="16dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />
        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>